<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spectrum">

    <ImageView
        android:id="@+id/logo_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/crunchyroll" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_head"

        android:padding="20dp">

        <TextView
            android:id="@+id/intro_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/info_login_faq"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_edit_text"
            android:layout_below="@+id/intro_login"
            android:layout_margin="@dimen/margin_default"
            android:background="@drawable/input_field"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/colorWhite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:endIconMode="password_toggle"
            android:layout_below="@+id/input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_edit_text"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:background="@drawable/input_field"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/colorWhite"/>



        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_password"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:focusable="true"
            android:fontFamily="@font/army"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/txt_login"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/info_login_signup"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_gooogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_login_credential"
        android:textStyle="bold" />
</RelativeLayout>
